--- a/resturant.css
+++ b/resturant.css
@@ -155,36 +155,36 @@ h2{
 }
 
 .catalogue:nth-child(1) {
-    background-image: url('C:/Users/smang/Downloads/meal1.png');
+    background-image: url('images/meal1.png');
 }
 
 .catalogue:nth-child(2) {
-    background-image: url('C:/Users/smang/Downloads/meal2.png');
+    background-image: url('images/meal2.png');
 }
 
 .catalogue:nth-child(3) {
-    background-image: url('C:/Users/smang/Downloads/meal3.png');
+    background-image: url('images/meal3.png');
 }
 
 .catalogue:nth-child(4) {
-    background-image: url('C:/Users/smang/Downloads/meal4.png');
+    background-image: url('images/meal4.png');
 }
 
 .catalogue:nth-child(5) {
-    background-image: url('C:/Users/smang/Downloads/meal5.png');
+    background-image: url('images/meal5.png');
 }
 
 .catalogue:nth-child(6) {
-    background-image: url('C:/Users/smang/Downloads/meal6.png');
+    background-image: url('images/meal6.png');
 }
 .catalogue:nth-child(7) {
-    background-image: url('C:/Users/smang/Downloads/meal7.png');
+    background-image: url('images/meal7.png');
 }
 .catalogue:nth-child(8) {
-    background-image: url('C:/Users/smang/Downloads/meal8.png');
+    background-image: url('images/meal8.png');
 }
 .catalogue:nth-child(9) {
-    background-image: url('C:/Users/smang/Downloads/meal9.png');
+    background-image: url('images/meal9.png');
 }
 
 
